@@ -131,6 +131,9 @@ Optimizations
 3. SOLR-1004: Check for abort more frequently during delta-imports.
               (Marc Sturlese, shalin)
 
+4. SOLR-1098: DateFormatTransformer can cache the format objects.
+              (Noble Paul via shalin)
+
 Bug Fixes
 ----------------------
 1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
